fixed some spacing. still spacing problems

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -4,7 +4,16 @@ $yellow: #FAD767;
 $black: #C1C1C1;
 
 input[type="text"] {
-    font-size:25px
+    margin-top: 50px;
+    font-size:25px;
+}
+
+#spoken-def {
+  font-size: 30px;
+}
+
+#spoken-sentence {
+  font-size: 30px;
 }
 
 .correct {
@@ -17,7 +26,6 @@ input[type="text"] {
 
 .pending {
   color: $yellow;
-  opacity: 0.75;
 }
 
 #input-link{
@@ -48,10 +56,38 @@ input[type="text"] {
   border-color: $green;
 }
 
-.btn-success {
+.btn-success, .btn-danger {
+  font-color: white;
   padding: 2px;
   padding-left: 8px;
   padding-right: 8px;
+}
+
+.form-control {
+    font-size: 1.5em;
+    line-height: 30px;
+    height: 30px;
+    padding: 1px;
+}
+
+#default {
+  color: white;
+}
+
+.btn-danger {
+  background-color: $red;
+  border-bottom-color: $red;
+  border-color: $red;
+  margin: 3px;
+}
+
+.btn-danger:focus {
+  background-color: $red;
+  border-color: $red;
+}
+.btn-danger:hover {
+  background-color: $red;
+  border-color: $red;
 }
 
 .close:hover {
@@ -64,6 +100,10 @@ input[type="text"] {
 
 label {
   font-weight: normal !important;
+}
+
+a {
+  color: black;
 }
 
 a:link {
@@ -79,6 +119,8 @@ a:visited {
 /* mouse over link */
 a:hover {
   color: $red;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* selected link */
@@ -156,9 +198,12 @@ a:active {
   margin-left: 2em;
 }
 
-#definition {
-  position:relative;
-  text-align: bottom;
+#definition-container {
+  width: 400px;
+  height: 430px;
+  border: 2px solid black;
+  border-radius: 25px;
+  margin-right: 200px;
 }
 
 p {
@@ -178,7 +223,7 @@ label { display: inline-block; }
   display: inline-block;
   position:relative;
   width: 1000px;
-  top: -18px;
+  top: -65px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -192,7 +237,7 @@ label { display: inline-block; }
 
 #block-of-white{
   position: relative;
-  top : -80px;
+  top : -130px;
   margin-left: -10px;
   background: white;
   width: 1100px;
@@ -221,7 +266,7 @@ label { display: inline-block; }
 #cursor-sensor{
   background-color: transparent;
   position: relative;
-  top : -150px;
+  top : -200px;
   margin-left: -10px;
   width: 1000px;
   height: 70px;
@@ -230,7 +275,7 @@ label { display: inline-block; }
 
 #instructions{
   position: absolute;
-  margin-top:15px;
+  margin-top: 15px;
   bottom: 0;
   margin-right: 5px;
 }
@@ -239,12 +284,14 @@ label { display: inline-block; }
   font-family: arial, sans-serif;
   font-size: 24px;
 }
+
 .smaller-english{
   font-family: arial, sans-serif;
   font-size: 16px;
 }
+
 #english-sentence{
-  margin-top: -100px;
+  margin-top: -120px;
 }
 
 #chinese-def {
